src/test/ui/issues/issue-12997-2.stderr
error[E0308]: mismatched types
  --> $DIR/issue-12997-2.rs:8:1
   |
LL | fn bar(x: isize) { }
   | ^^^^^^^^^^^^^^^^^^^^ expected `isize`, found `&mut Bencher`
   |
   = note: this error originates in the attribute macro `bench` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
